Fixed issue with overflow when adding a new module

--- a/main.css
+++ b/main.css
@@ -3,10 +3,11 @@
 body {
     background-color: peachpuff;
     margin: 0; /* remove any default margin set by the browser */
-    height: 100vh;
+    height: 100vh; /* Changed to min-height so that */
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px 0 20px 0; /* Added this padding in the case that a user adds a bunch of modules increasing the height of the main-container div, this padding allows for there to always be space between the top of the window and bottom of the window*/
 }
 button {
     border: none; /* removes the border */
@@ -16,6 +17,9 @@ button {
     height: 50px;
 
 }
+
+
+/* Local */
 
 /* Buttons */
 .calculate-button {
@@ -57,8 +61,11 @@ button {
     gap: 25px;
     border-radius: 25px;
     box-shadow: 0px 0px 20px 0px black;
+    overflow: hidden; /* Added overflow, so that the text can no longer overflow the main-container div*/
 }
 
+
+/* classes */
 .total-grade .outer-box {
     background-color: #82c6f7;
     width: 300px;
